testdata/grammars/bad/illegal_character_1.grammar
# This grammar has an illegal % character

S : `(` S `)` S % e
